added button to change between english-spanish or spanish-english translations

--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
 
   <form class="row container">
     <div class="mb-3">
-      <label for="english-text" class="form-label">English text</label>
-      <textarea name="englishText" id="english-text" cols="30" rows="10" class="form-control"></textarea>
+      <label for="text" class="form-label fs-4" id="label">English text</label>
+      <textarea name="text" id="text" cols="30" rows="10" class="form-control"></textarea>
     </div>
     <button type="submit" class="btn btn-primary px-4">Submit</button>
   </form>
+
+  <button class="btn btn-primary" id="change">Change language order</button>
 
   <div class="alert alert-primary container m-3" role="alert">Translation results here!!</div>
 </body>
