--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body class="d-flex flex-column justify-content-center align-items-center vh-100 gap-4">
   <h1>English - Spanish translator</h1>
 
-  <form class="row container">
+  <form class="row container" id="form">
     <div class="mb-3">
       <label for="text" class="form-label fs-4" id="label">English text</label>
       <textarea name="text" id="text" cols="30" rows="10" class="form-control"></textarea>
@@ -22,7 +22,7 @@
 
   <button class="btn btn-primary" id="change">Change language order</button>
 
-  <div class="alert alert-primary container m-3" role="alert">Translation results here!!</div>
+  <div class="alert alert-primary container m-3" id="alert" role="alert">Translation results here!!</div>
 </body>
 
 </html>
